--- a/frontend/blocknotes-frontend/index.html
+++ b/frontend/blocknotes-frontend/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Vite React entry point -->
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
